# github-actions-workshop-rust

./: Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  pipeline.yml
src/: main.rs
